# mocap-gsplat

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  TRIALS.md  current.txt  download_vggt_pretrained.py  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_gsplat.txt  requirements_vggt.txt  run_vggt.py  scratch.toml  test.txt
.github/workflows/: build_and_release.yml  checks.yml  release.yml
mosplat_blender/: .env  .env.txt  __init__.py  blender_manifest.toml.txt  blender_manifest.txt  constants.py  export.py  helpers.py  install.py  main.py  operators.py  panels.py  preferences.py  properties.py  protocols.py  requirements.cpu.txt  requirements.cuda.txt  requirements.nobinary.txt  requirements.txt  tests.py  types.py  utilities.py  vggt_interface.py  visualization.py
mosplat_blender/core/: INFO.md  __init__.py  bases.py  checks.py  handlers.py  preferences.py  preferences_meta.py  properties.py  properties_meta.py
mosplat_blender/infrastructure/: INFO.md  __init__.py  bases.py  checks.py  constants.py  decorators.py  dl_ops.py  identifiers.py  logs.py  macros.py  mixins.py  protocols.py  schemas.py  tests.py  utilities.py
mosplat_blender/interfaces/: __init__.py  logging_interface.py  media_io_interface.py  (+3 more)
mosplat_blender_old/: __init__.py  constants.py  install.py  operators.py  properties.py  visualization.py
scripts/: avi_to_frames.py  build.py  download_vggt_pretrained.py  format.py  generate_property_meta_files.py  mask.py  mog2.py  preprocess.py  prereload.py  setup.py  subject_mask.py  torch_mask.py  validate.py
src/: __init__.py  install.py  log_utils.py
vggt_blender/: README.md  __init__.py  constants.py  export.py  helpers.py  install.py  operators.py  panels.py  properties.py  vggt_interface.py  visualization.py
(+57 files in other folders)
