[project]
description = ""
name = "mocap-gsplat"
version = "0.1.0"
requires-python = "==3.11.*"

dependencies = [
"torch==2.9.0+cu130",
"torchvision==0.24.0+cu130",
"numpy",
"Pillow",
"opencv-python",
"matplotlib",
"tqdm",
"viser",
"tyro",
"tensorboard",
"tensorly",
"pyyaml",
"scikit-learn",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"

[tool.uv.sources]
torch = [
  {index = "pytorch-cu130"},
]
torchvision = [
  {index = "pytorch-cu130"},
]

[tool.uv]
build-constraint-dependencies = ["torch==2.9.0+cu130"]
required-environments = ["sys_platform == 'linux'", "sys_platform == 'win32'"]
override-dependencies = ["torch==2.9.0+cu130", "torchvision==0.24.0+cu130"]
prerelease = "allow"
preview = true
default-groups = ["vggt"]

[dependency-groups]
vggt = [
  "huggingface_hub",
  "einops",
  "safetensors",
  "gradio",
  "viser",
  "hydra-core",
  "omegaconf",
  "scipy",
  "onnxruntime",
  "requests",
  "trimesh",
  "pydantic",
  "pyceres",
  "lightglue@git+https://github.com/jytime/LightGlue.git#egg=lightglue",
  "pycolmap>=3.10.0",
]